# pybliometrics

./: README.rst  pyproject.toml
.github/workflows/: publish.yml
docs/reference/scopus/: CitationOverview.rst
meta/: CHANGES.rst
pybliometrics/: __init__.py
pybliometrics/sciencedirect/: __init__.py  article_entitlement.py  article_metadata.py  object_metadata.py  object_retrieval.py
pybliometrics/sciencedirect/tests/: test_ArticleEntitlement.py  test_ObjectMetadata.py  test_ObjectRetrieval.py
pybliometrics/scopus/: abstract_citation.py
pybliometrics/scopus/tests/: test_CitationOverview.py  test_SerialTitleSearch.py
pybliometrics/superclasses/: base.py  retrieval.py  search.py
pybliometrics/utils/: constants.py  get_content.py  parse_content.py
