[build-system]
requires = ["setuptools>=80.9", "wheel", "setuptools_scm[toml]>=8.1"]
build-backend = "setuptools.build_meta"

[project]
name = "pybliometrics-sd"
authors = [{name = "'John Kitchin and Michael E. Rose", email = "Michael.Ernst.Rose@gmail.com"}]
maintainers = [{name = "Nils Herrmann", email = "nils_herrmann@outlook.de"}]
description = "Fork of pybliometrics with a PUT-based ScienceDirect Search implementation, maintained for the bibly library"
readme = "README.rst"
license = "MIT"
dependencies = [
    "requests",
    "tqdm",
    "urllib3",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Documentation :: Sphinx"
]
keywords = ["scopus"]
dynamic = ["version"]
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest",
    "Pillow",
]

[project.urls]
Homepage = "https://github.com/nils-herrmann/pybliometrics"
"Bug Tracker" = "https://github.com/nils-herrmann/pybliometrics/issues"
"Upstream project" = "https://github.com/pybliometrics-dev/pybliometrics"
"Documentation (stable)" = "https://pybliometrics.readthedocs.io/en/stable/"
"Documentation (latest)" = "https://pybliometrics.readthedocs.io/en/latest/"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["pybliometrics", "pybliometrics.*"]

[tool.setuptools_scm]

